welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: ';' expected but ')' found.
           setPos(k,i))
                      ^ColumnByColumn:13: error: Missing closing brace `}' assumed here
} 
^