welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  while(getX!=6 &&getY!=6){
    for (i<-1 to getMondeHauteur) {
      var j:Int=0
      setPos(0,i)
      ecritMessage(i)
      for (k<- 1 to getMondeLargeur){
        if (getY==6){
           setPos(k,i))
      }
    }
    
  }
}